--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-slidy",
-  "description": "Simple configurable carousel component on SvelteJS",
-  "version": "2.2.9",
+  "description": "Simple, configurable carousel component built with SvelteJS",
+  "version": "2.3.0",
   "keywords": [
     "Svelte",
     "SvelteJs",
