--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-slidy",
-  "description": "Simple, configurable carousel component built with SvelteJS",
-  "version": "2.3.8",
+  "description": "Simple, configurable & reusable carousel component built with SvelteJS",
+  "version": "2.3.9",
   "keywords": [
     "Svelte",
     "SvelteJs",
@@ -27,10 +27,10 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "prettier-plugin-svelte": "^1.1.0",
-    "rollup": "^2.23.1",
-    "rollup-plugin-svelte": "^6.1.1",
-    "svelte": "^3.24.1"
+    "rollup": "^2.35.1",
+    "rollup-plugin-svelte": "^7.0.0",
+    "svelte": "^3.31.1"
   }
 }
