--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-slidy",
   "description": "Simple, configurable & reusable carousel component built with SvelteJS",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "keywords": [
     "Svelte",
     "SvelteJs",
@@ -18,6 +18,10 @@
   "bugs": {
     "url": "https://github.com/Valexr/svelte-slidy/issues"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "svelte": "src/index.js",
@@ -30,6 +34,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "prettier-plugin-svelte": "^1.1.0",
     "rollup": "^2.35.1",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-svelte": "^7.0.0",
     "svelte": "^3.31.1"
   }
