--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-slidy",
-  "description": "Simple, configurable & reusable carousel component built with SvelteJS",
-  "version": "2.4.2",
+  "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
+  "version": "2.4.3",
   "keywords": [
     "Svelte",
     "SvelteJs",
