--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-slidy",
   "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
-  "version": "2.4.8",
+  "version": "2.4.9",
   "keywords": [
     "Svelte",
     "SvelteJs",
@@ -32,7 +32,8 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.0",
-    "prettier-plugin-svelte": "^1.1.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.0",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-svelte": "^7.0.0",
