new svelte-slidy site

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/Valexr/svelte-slidy"
   },
-  "homepage": "https://valexr.github.io/slidy-site/",
+  "homepage": "https://valexr.github.io/svelte-slidy/",
   "bugs": {
     "url": "https://github.com/Valexr/svelte-slidy/issues"
   },
