--- a/www/package.json
+++ b/www/package.json
@@ -25,8 +25,7 @@
 		"rollup-plugin-terser": "^7.0.0",
 		"sass": "^1.26.9",
 		"svelte": "^3.0.0",
-		"svelte-preprocess": "^4.6.1",
-		"svelte-slidy": "^2.3.4"
+		"svelte-preprocess": "^4.6.1"
 	},
 	"dependencies": {
 		"sirv-cli": "^1.0.0"
