--- a/package.json
+++ b/package.json
@@ -1,42 +1,37 @@
 {
-  "name": "svelte-slidy",
-  "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
-  "version": "2.4.9",
-  "keywords": [
-    "Svelte",
-    "SvelteJs",
-    "Carousel",
-    "Svelte-plugin"
-  ],
-  "author": "Valexr",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Valexr/svelte-slidy"
-  },
-  "homepage": "https://valexr.github.io/svelte-slidy/",
-  "bugs": {
-    "url": "https://github.com/Valexr/svelte-slidy/issues"
-  },
-  "files": [
-    "src",
-    "dist"
-  ],
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "svelte": "src/index.js",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "prepublishOnly": "yarn build"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.1.0",
-    "rollup": "^2.35.1",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "svelte": "^3.31.1"
-  }
+	"name": "svelte-slidy",
+	"version": "2.4.9",
+	"description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
+	"main": "dist/slidy.js",
+	"module": "dist/slidy.esm.js",
+	"browser": "dist/slidy.iife.js",
+	"svelte": "src/index.js",
+	"scripts": {
+		"build": "node esbuild",
+		"dev": "node esbuild.dev",
+		"compare": "npm run test:build && node tests/esbuild.compare",
+		"test:build": "node tests/esbuild.dev",
+		"test": "npm run test:build && node tests | tap-diff"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Valexr/svelte-slidy.git"
+	},
+	"keywords": [
+		"Svelte",
+		"SvelteJs",
+		"Carousel",
+		"Svelte-plugin"
+	],
+	"author": "Valexr",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Valexr/svelte-slidy/issues"
+	},
+	"homepage": "https://valexr.github.io/svelte-slidy/",
+	"devDependencies": {
+		"esbuild": "^0.8.33",
+		"esbuild-svelte": "^0.4.0",
+		"svelte": "^3.31.2"
+	}
 }
