--- a/www/package.json
+++ b/www/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "node esbuild",
     "dev": "node esbuild --dev",
-    "start": "npx derver --production --port=5000 public"
+    "start": "npx derver --production --port=5000 public",
+    "predeploy": "node esbuild",
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "esbuild": "^0.8.33",
     "esbuild-svelte": "^0.4.0",
     "esbuild-svelte-paths": "^0.1.2",
+    "gh-pages": "^3.1.0",
     "sass": "^1.32.4",
     "svelte": "^3.31.2",
     "svelte-preprocess": "^4.6.1",
