--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
     "name": "svelte-slidy",
-    "version": "2.5.7",
+    "version": "2.5.9",
     "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
-    "module": "dist/slidy.esm.js",
+    "module": "dist/slidy.es.js",
     "browser": "dist/slidy.iife.js",
     "svelte": "src/index.js",
     "scripts": {
         "build": "node esbuild",
-        "compare": "npm run test:build && node tests/esbuild.compare",
-        "test:build": "node tests/esbuild.dev",
-        "test": "npm run test:build && node tests | tap-diff",
         "prepublishOnly": "node esbuild"
     },
     "repository": {
@@ -30,8 +27,8 @@
     },
     "homepage": "https://valexr.github.io/svelte-slidy/",
     "devDependencies": {
-        "esbuild": "^0.8.33",
-        "esbuild-svelte": "^0.4.0",
-        "svelte": "^3.31.2"
+        "esbuild": "^0.8.57",
+        "esbuild-svelte": "^0.4.3",
+        "svelte": "^3.35.0"
     }
 }
