--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
     "name": "svelte-slidy",
-    "version": "2.6.0",
+    "version": "2.6.1",
     "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
     "module": "dist/slidy.es.js",
+    "browser": "dist/slidy.iife.js",
     "svelte": "src/index.js",
     "scripts": {
         "build": "node esbuild",
+        "dev": "node esbuild --dev",
+        "start": "npx derver --production --port=5000 www/public",
+        "predeploy": "node esbuild",
+        "deploy": "gh-pages -d www/public",
         "prepublishOnly": "node esbuild"
     },
     "repository": {
@@ -26,8 +31,12 @@
     },
     "homepage": "https://valexr.github.io/svelte-slidy/",
     "devDependencies": {
+        "derver": "^0.4.13",
         "esbuild": "^0.9.2",
         "esbuild-svelte": "^0.4.3",
-        "svelte": "^3.35.0"
+        "svelte": "^3.35.0",
+        "svelte-preprocess": "^4.6.9",
+        "sass": "^1.32.8",
+        "gh-pages": "^3.1.0"
     }
 }
