--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svelte-slidy",
-    "version": "2.6.2",
+    "version": "2.6.3",
     "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
     "module": "dist/slidy.es.js",
@@ -37,5 +37,8 @@
         "svelte-preprocess": "^4.6.9",
         "sass": "^1.32.8",
         "gh-pages": "^3.1.0"
+    },
+    "peerDependencies": {
+        "svelte": "^3.35.0"
     }
 }
