--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     },
     "homepage": "https://valexr.github.io/svelte-slidy/",
     "devDependencies": {
-        "derver": "^0.4.13",
-        "esbuild": "^0.9.2",
+        "derver": "^0.4.14",
+        "esbuild": "^0.9.6",
         "esbuild-svelte": "^0.4.3",
-        "svelte": "^3.35.0",
-        "svelte-preprocess": "^4.6.9",
+        "gh-pages": "^3.1.0",
         "sass": "^1.32.8",
-        "gh-pages": "^3.1.0"
+        "svelte": "^3.35.0",
+        "svelte-preprocess": "^4.6.9"
     },
     "peerDependencies": {
         "svelte": "^3.35.0"
