--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svelte-slidy",
-    "version": "2.6.3",
+    "version": "2.6.4",
     "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
     "module": "dist/slidy.es.js",
@@ -30,15 +30,15 @@
     },
     "homepage": "https://slidy.valexr.online",
     "devDependencies": {
-        "derver": "^0.4.14",
-        "esbuild": "^0.11.7",
-        "esbuild-svelte": "^0.4.3",
-        "gh-pages": "^3.1.0",
-        "sass": "^1.32.8",
-        "svelte": "^3.37.0",
-        "svelte-preprocess": "^4.7.0"
+        "derver": "^0.4.15",
+        "esbuild": "^0.12.5",
+        "esbuild-svelte": "0.4.3",
+        "gh-pages": "^3.2.0",
+        "sass": "^1.34.0",
+        "svelte": "3.37.0",
+        "svelte-preprocess": "^4.7.3"
     },
     "peerDependencies": {
-        "svelte": "^3.35.0"
+        "svelte": "3.37.0"
     }
 }
