--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svelte-slidy",
-    "version": "2.6.8",
+    "version": "2.6.9",
     "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
     "module": "dist/slidy.es.js",
@@ -10,7 +10,7 @@
         "dev": "node esbuild --dev",
         "start": "npx derver --production --port=5000 www/public",
         "predeploy": "node esbuild",
-        "deploy": "gh-pages -d www/public",
+        "deploy": "echo 'slidy.valexr.online' > ./www/public/CNAME && gh-pages -d www/public",
         "prepublishOnly": "node esbuild"
     },
     "repository": {
@@ -31,10 +31,10 @@
     "homepage": "https://slidy.valexr.online",
     "devDependencies": {
         "derver": "^0.4.15",
-        "esbuild": "^0.12.5",
+        "esbuild": "^0.12.6",
         "esbuild-svelte": "^0.5.1",
         "gh-pages": "^3.2.0",
-        "sass": "^1.34.0",
+        "sass": "^1.34.1",
         "svelte": "^3.38.2",
         "svelte-preprocess": "^4.7.3"
     },
