--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "svelte-slidy",
-    "version": "2.7.1",
-    "description": "SLIDY – simple, configurable & reusable carousel component built with SvelteJS",
+    "version": "2.8.0",
+    "description": "SLIDY - simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
-    "module": "dist/slidy.es.js",
+    "module": "dist/slidy.mjs",
     "svelte": "src/index.js",
     "scripts": {
         "build": "node esbuild",
@@ -29,14 +29,27 @@
         "url": "https://github.com/Valexr/svelte-slidy/issues"
     },
     "homepage": "https://slidy.valexr.online",
+    "prettier": {
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "svelteSortOrder": "options-markup-scripts-styles",
+        "svelteStrictMode": false,
+        "svelteBracketNewLine": true,
+        "svelteAllowShorthand": true,
+        "svelteIndentScriptAndStyle": true,
+        "plugins": [
+            "prettier-plugin-svelte"
+        ]
+    },
     "devDependencies": {
-        "derver": "^0.4.19",
-        "esbuild": "^0.12.25",
-        "esbuild-svelte": "^0.5.4",
+        "derver": "^0.5.3",
+        "esbuild": "^0.14.5",
+        "esbuild-svelte": "^0.6.0",
         "gh-pages": "^3.2.3",
-        "sass": "^1.39.0",
-        "svelte": "^3.42.4",
-        "svelte-preprocess": "^4.9.0"
+        "sass": "^1.45.0",
+        "svelte": "^3.44.3",
+        "svelte-preprocess": "^4.10.0"
     },
     "peerDependencies": {
         "svelte": "^3.42.4"
