--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "node esbuild",
         "dev": "node esbuild --dev",
         "start": "npx derver --production --port=5000 www/public",
-        "predeploy": "node esbuild",
+        "predeploy": "node esbuild --deploy",
         "deploy": "echo 'slidy.valexr.online' > ./www/public/CNAME && gh-pages -d www/public",
         "prepublishOnly": "node esbuild"
     },
