--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Valexr/slidy.git"
+        "url": "https://github.com/Valexr/slidy.git"
     },
     "keywords": [
         "Svelte",
@@ -40,15 +40,28 @@
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
     },
-    "homepage": "https://slidy.valexr.online",
+    "homepage": "https://valexr.github.io/slidy",
+    "prettier": {
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "svelteSortOrder": "options-markup-scripts-styles",
+        "svelteStrictMode": false,
+        "svelteBracketNewLine": true,
+        "svelteAllowShorthand": true,
+        "svelteIndentScriptAndStyle": true,
+        "plugins": [
+            "prettier-plugin-svelte"
+        ]
+    },
     "devDependencies": {
+        "@slidy/svelte": "workspace:*",
         "derver": "^0.5.3",
         "esbuild": "^0.14.14",
         "esbuild-svelte": "^0.6.2",
         "gh-pages": "^3.2.3",
         "sass": "^1.49.0",
         "svelte": "^3.46.3",
-        "svelte-preprocess": "^4.10.2",
-        "@slidy/svelte": "workspace:*"
+        "svelte-preprocess": "^4.10.2"
     }
 }
