--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
         "esbuild": "^0.14.14",
         "esbuild-svelte": "^0.6.2",
         "gh-pages": "^3.2.3",
+        "prettier": "^2.5.1",
+        "prettier-plugin-svelte": "^2.6.0",
         "sass": "^1.49.0",
         "svelte": "^3.46.3",
         "svelte-preprocess": "^4.10.2"
