--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -5,7 +5,7 @@
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
     "browser": "dist/slidy.js",
-    "svelte": "dist/index.js",
+    "svelte": "dist/Slidy.svelte",
     "type": "module",
     "exports": {
         ".": {
@@ -19,7 +19,7 @@
         "dev": "node esbuild --dev",
         "dev:svelte": "node esbuild --svelte",
         "dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
-        "build": "node esbuild && tsc --emitDeclarationOnly --outDir dist",
+        "build": "node esbuild && prettier --write \"**/*.{js,ts,md,svelte,json}\" && tsc --emitDeclarationOnly --outDir dist",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public",
         "format": "prettier --ignore-path .gitignore --write .",
         "transpile": "node transpile && prettier --write \"**/*.{js,ts,md,svelte,json}\""
@@ -62,7 +62,6 @@
         "sass": "^1.49.0",
         "svelte": "^3.46.3",
         "svelte-preprocess": "^4.10.2",
-        "tsc": "^2.0.4",
         "tslib": "^2.3.1",
         "typescript": "^4.5.5"
     },
