--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svelte-slidy",
-    "version": "2.8.3",
+    "version": "2.8.4",
     "description": "SLIDY - simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
     "module": "dist/slidy.mjs",
@@ -28,7 +28,7 @@
     "bugs": {
         "url": "https://github.com/Valexr/svelte-slidy/issues"
     },
-    "homepage": "https://slidy.valexr.online",
+    "homepage": "https://valexr.github.io/svelte-slidy",
     "prettier": {
         "tabWidth": 4,
         "semi": true,
