--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
     "name": "svelte-slidy",
-    "version": "2.8.4",
+    "version": "2.8.5",
     "description": "SLIDY - simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.js",
     "module": "dist/slidy.mjs",
     "svelte": "src/index.js",
+    "files": [
+        "./dist/*",
+        "./src/*"
+    ],
     "scripts": {
         "build": "node esbuild",
         "dev": "node esbuild --dev",
