--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "dev:www": "pnpm dev --parallel --filter=slidy...",
         "dev:core": "pnpm dev:core --parallel",
         "dev:svelte": "pnpm dev:svelte --parallel",
-        "build": "pnpm build -r",
+        "build": "node esbuild",
+        "build:www": "pnpm build -r",
         "build:core": "pnpm build --filter=@slidy/core",
         "build:svelte": "pnpm build --filter=@slidy/svelte",
         "start": "npx derver --production --port=5555 www/public",
-        "predeploy": "node esbuild --deploy",
+        "predeploy": "pnpm build:www",
         "deploy": "gh-pages -d www/public",
-        "prepublishOnly": "node esbuild",
         "pub": "pnpm pub -r"
     },
     "repository": {
@@ -48,7 +48,6 @@
         "singleQuote": true,
         "svelteSortOrder": "options-markup-scripts-styles",
         "svelteStrictMode": false,
-        "svelteBracketNewLine": true,
         "svelteAllowShorthand": true,
         "svelteIndentScriptAndStyle": true,
         "plugins": [
