--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --core",
         "dev:svelte": "node esbuild --dev",
-        "build": "node esbuild && tsc --emitDeclarationOnly --outDir dist || pnpm format",
+        "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist || pnpm format",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public",
         "format": "prettier --ignore-path ../../.gitignore --write '**/*.{js,ts,md,json,html,css}'"
     },
