--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -26,7 +26,8 @@
         "dev:svelte": "node esbuild --svelte",
         "dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
         "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist || pnpm format",
-        "format": "prettier --ignore-path ../../.gitignore --write '**/*.{js,ts,md,svelte,json,html,css}'",
+        "build:local": "pnpm build -r --filter=@slidy/svelte...",
+        "format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
         "check": "svelte-check --tsconfig ./tsconfig.json",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public"
     },
@@ -52,7 +53,6 @@
         "singleQuote": true,
         "svelteSortOrder": "options-markup-scripts-styles",
         "svelteStrictMode": false,
-        "svelteBracketNewLine": true,
         "svelteAllowShorthand": true,
         "svelteIndentScriptAndStyle": true,
         "plugins": [
