--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "build:core": "pnpm build --filter=@slidy/core",
         "build:svelte": "pnpm build --filter=@slidy/svelte",
         "start": "npx derver --production --port=5555 www/public",
-        "predeploy": "pnpm build:www",
-        "deploy": "gh-pages -d www/public",
+        "deploy": "pnpm build:www && gh-pages -d www/public",
         "pub": "pnpm pub -r"
     },
     "repository": {
