--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@slidy/svelte",
     "version": "3.0.5",
-    "description": "SLIDY - simple, configurable & reusable carousel component built with SvelteJS",
+    "description": "Simple, configurable & reusable carousel component built with SvelteJS",
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
     "browser": "dist/slidy.js",
