--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@slidy/core",
     "version": "3.0.5",
-    "description": "Slidy - simple, configurable & reusable sliding action script",
+    "description": "Simple, configurable & reusable sliding action script",
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
     "browser": "dist/slidy.js",
