--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "devDependencies": {
         "@slidy/svelte": "workspace:*",
         "derver": "^0.5.3",
-        "esbuild": "^0.14.17",
+        "esbuild": "^0.14.18",
         "esbuild-svelte": "^0.6.2",
         "gh-pages": "^3.2.3",
         "prettier": "^2.5.1",
         "prettier-plugin-svelte": "^2.6.0",
         "sass": "^1.49.7",
         "svelte": "^3.46.3",
-        "svelte-preprocess": "^4.10.2"
+        "svelte-preprocess": "^4.10.2",
+        "typescript": "^4.5.5"
     }
 }
