--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -61,7 +61,8 @@
     },
     "devDependencies": {
         "derver": "^0.5.3",
-        "esbuild": "^0.14.17",
+        "esbuild": "^0.14.18",
+        "tslib": "^2.3.1",
         "typescript": "^4.5.5"
     }
 }
