--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,31 +2,14 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "@cmp": [
-                "www/src/cmp/index.js"
-            ],
-            "@act": [
-                "www/src/act/index.js"
-            ],
-            "@utils": [
-                "www/src/utils/utils.js"
-            ],
-            "@settings": [
-                "www/src/utils/settings.js"
-            ],
-            "@items": [
-                "www/src/api/items.js"
-            ],
-            "@api": [
-                "www/src/api/api.js"
-            ]
+            "@cmp": ["www/src/cmp/index.js"],
+            "@act": ["www/src/act/index.js"],
+            "@utils": ["www/src/utils/utils.js"],
+            "@settings": ["www/src/utils/settings.js"],
+            "@items": ["www/src/api/items.js"],
+            "@api": ["www/src/api/api.js"]
         }
     },
-    "include": [
-        "www/src/**/*"
-    ],
-    "exclude": [
-        "node_modules/*",
-        "www/public/*"
-    ]
+    "include": ["www/src/**/*"],
+    "exclude": ["node_modules/*", "www/public/*"]
 }
