--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,7 @@
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --core",
         "dev:svelte": "node esbuild --dev",
+        "dev:react": "node esbuild --dev",
         "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist || pnpm format",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public",
         "format": "prettier --ignore-path ../../.gitignore --write '**/*.{js,ts,md,json,html,css}'"
@@ -58,11 +59,5 @@
         "plugins": [
             "prettier-plugin-svelte"
         ]
-    },
-    "devDependencies": {
-        "derver": "^0.5.3",
-        "esbuild": "^0.14.21",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.5"
     }
 }
