--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -62,16 +62,12 @@
     "devDependencies": {
         "@slidy/core": "workspace:*",
         "@tsconfig/svelte": "^3.0.0",
-        "derver": "^0.5.3",
-        "esbuild": "^0.14.21",
         "esbuild-svelte": "^0.6.2",
         "sass": "^1.49.7",
         "svelte": "^3.46.4",
-        "svelte-check": "^2.4.4",
+        "svelte-check": "^2.4.5",
         "svelte-preprocess": "^4.10.3",
-        "svelte2tsx": "^0.5.4",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.5"
+        "svelte2tsx": "^0.5.5"
     },
     "peerDependencies": {
         "svelte": "^3.42.4"
