--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -36,6 +36,22 @@
     ],
     "author": "EricRovell",
     "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Valexr/slidy/issues"
+    },
+    "homepage": "https://valexr.github.io/slidy",
+    "prettier": {
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "svelteSortOrder": "options-markup-scripts-styles",
+        "svelteStrictMode": false,
+        "svelteAllowShorthand": true,
+        "svelteIndentScriptAndStyle": true,
+        "plugins": [
+            "prettier-plugin-svelte"
+        ]
+    },
     "devDependencies": {
         "@slidy/core": "workspace:*",
         "@types/react": "^17.0.39",
