--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -62,6 +62,7 @@
     "devDependencies": {
         "@slidy/core": "workspace:*",
         "@tsconfig/svelte": "^3.0.0",
+        "css-tree": "^2.0.4",
         "esbuild-svelte": "^0.6.2",
         "sass": "^1.49.9",
         "svelte": "^3.46.4",
