--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -5,8 +5,8 @@
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
     "browser": "dist/slidy.js",
-    "svelte": "dist/Slidy.svelte",
     "types": "dist/index.d.ts",
+    "style": "dist/slidy.css",
     "type": "module",
     "files": [
         "dist/*"
@@ -17,8 +17,10 @@
             "module": "./dist/slidy.mjs",
             "require": "./dist/slidy.cjs",
             "browser": "./dist/slidy.js",
-            "svelte": "./dist/Slidy.svelte"
+            "svelte": "./dist/Slidy.svelte",
+            "style": "./dist/slidy.css"
         },
+        "./dist/slidy.css": "./dist/slidy.css",
         "./package.json": "./package.json"
     },
     "scripts": {
@@ -27,7 +29,7 @@
         "dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
         "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist || pnpm format",
         "build:local": "pnpm build -r --filter=@slidy/svelte...",
-        "format": "prettier --write '**/*.{ts,js,md,svelte,json,html,css}'",
+        "format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
         "check": "svelte-check --tsconfig ./tsconfig.json",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public"
     },
