--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,8 +25,42 @@
         "dev:svelte": "node esbuild --dev",
         "dev:react": "node esbuild --dev",
         "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist",
+        "lint": "eslint './src/**/*.{js,ts}'",
+        "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
+        "prelint": "pnpm run format",
         "pub": "pnpm build && pnpm publish --no-git-checks --access public",
         "format": "prettier --ignore-path ../../.gitignore --write '**/*.{js,ts,md,json,html,css}'"
+    },
+    "eslintConfig": {
+        "extends": [
+            "plugin:@typescript-eslint/recommended"
+        ],
+        "plugins": [
+            "@typescript-eslint"
+        ],
+        "parser": "@typescript-eslint/parser",
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "rules": {
+            "semi": 0,
+            "no-underscore-dangle": 0,
+            "import/prefer-default-export": 0
+        }
+    },
+    "prettier": {
+        "semi": true,
+        "tabWidth": 4,
+        "printWidth": 120,
+        "singleQuote": true,
+        "svelteSortOrder": "options-markup-scripts-styles",
+        "svelteStrictMode": true,
+        "svelteAllowShorthand": true,
+        "svelteIndentScriptAndStyle": true,
+        "plugins": [
+            "prettier-plugin-svelte"
+        ]
     },
     "repository": {
         "type": "git",
@@ -48,8 +82,12 @@
     },
     "homepage": "https://valexr.github.io/slidy",
     "devDependencies": {
+        "@types/eslint": "^8.4.1",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
         "derver": "^0.5.3",
-        "esbuild": "^0.14.24",
+        "esbuild": "^0.14.25",
+        "eslint": "^8.10.0",
         "tslib": "^2.3.1",
         "typescript": "^4.6.2"
     }
