--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -87,6 +87,7 @@
         "@typescript-eslint/parser": "^5.13.0",
         "derver": "^0.5.3",
         "esbuild": "^0.14.25",
+        "esbuild-plugin-eslinter": "^0.1.1",
         "eslint": "^8.10.0",
         "tslib": "^2.3.1",
         "typescript": "^4.6.2"
