--- a/packages/svelte/tsconfig.json
+++ b/packages/svelte/tsconfig.json
@@ -1,15 +1,19 @@
 {
-    "compilerOptions": {
-        "module": "ES2020",
-        "target": "ESNext",
-        "declaration": true,
-        "emitDeclarationOnly": true,
-        "declarationDir": "dist/",
-        "strict": true,
-        "esModuleInterop": true,
-        "moduleResolution": "Node"
-    },
-    "extends": "@tsconfig/svelte/tsconfig.json",
-    "include": ["src/**/*"],
-    "exclude": ["node_modules/*", "dist/*", "dev/public/*", "src/cmp/*"]
+	"compilerOptions": {
+		"module": "ES2020",
+		"target": "ESNext",
+		"declaration": true,
+		"emitDeclarationOnly": true,
+		"declarationDir": "dist/",
+		"strict": true,
+		"esModuleInterop": true,
+		"moduleResolution": "Node"
+	},
+	"extends": "@tsconfig/svelte/tsconfig.json",
+	"include": [ "src/**/*" ],
+	"exclude": [
+		"node_modules/*",
+		"dist/*",
+		"public/*"
+	]
 }
