--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,88 +1,88 @@
 {
-	"name": "@slidy/svelte",
-	"version": "3.0.5",
-	"description": "Simple, configurable & reusable carousel component built with SvelteJS",
-	"main": "dist/slidy.cjs",
-	"module": "dist/slidy.mjs",
-	"browser": "dist/slidy.js",
-	"svelte": "dist/Slidy.svelte",
-	"types": "dist/index.d.ts",
-	"style": "dist/slidy.css",
-	"type": "module",
-	"files": [
-		"dist/*"
-	],
-	"exports": {
-		".": {
-			"import": "./dist/slidy.mjs",
-			"module": "./dist/slidy.mjs",
-			"require": "./dist/slidy.cjs",
-			"browser": "./dist/slidy.js",
-			"svelte": "./dist/Slidy.svelte",
-			"style": "./dist/slidy.css"
-		},
-		"./dist/Slidy.svelte": "./dist/Slidy.svelte",
-		"./dist/slidy.css": "./dist/slidy.css",
-		"./package.json": "./package.json"
-	},
-	"scripts": {
-		"dev": "node esbuild --dev",
-		"dev:svelte": "node esbuild --svelte",
-		"dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
-		"build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist || prettier --write 'dist/**/*.{ts,md,svelte,json,html,css}'",
-		"build:local": "pnpm build -r --filter=@slidy/svelte...",
-		"format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"pub": "pnpm build && pnpm publish --no-git-checks --access public",
-		"lint": "eslint src/**/*.{ts,js,svelte}"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Valexr/slidy.git"
-	},
-	"keywords": [
-		"carousel",
-		"component",
-		"svelte",
-		"sveltejs",
-		"svelte-plugin"
-	],
-	"author": "Valexr",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/Valexr/slidy/issues"
-	},
-	"homepage": "https://valexr.github.io/slidy",
-	"prettier": {
-		"semi": true,
-		"tabWidth": 4,
-		"printWidth": 120,
-		"singleQuote": true,
-		"svelteSortOrder": "options-markup-scripts-styles",
-		"svelteStrictMode": true,
-		"svelteAllowShorthand": true,
-		"svelteIndentScriptAndStyle": true,
-		"plugins": [
-			"prettier-plugin-svelte"
-		]
-	},
-	"devDependencies": {
-		"@slidy/core": "workspace:*",
-		"@tsconfig/svelte": "^3.0.0",
-		"@types/node": "^17.0.21",
-		"@typescript-eslint/eslint-plugin": "^5.13.0",
-		"@typescript-eslint/parser": "^5.13.0",
-		"css-tree": "^2.1.0",
-		"esbuild-svelte": "^0.6.3",
-		"eslint": "^8.10.0",
-		"eslint-plugin-svelte3": "^3.4.1",
-		"svelte": "^3.46.4",
-		"svelte-check": "^2.4.5",
-		"svelte-preprocess": "^4.10.4",
-		"svelte2tsx": "^0.5.5",
-		"typescript": "^4.6.2"
-	},
-	"peerDependencies": {
-		"svelte": "^3.42.4"
-	}
+    "name": "@slidy/svelte",
+    "version": "3.0.5",
+    "description": "Simple, configurable & reusable carousel component built with SvelteJS",
+    "main": "dist/slidy.cjs",
+    "module": "dist/slidy.mjs",
+    "browser": "dist/slidy.js",
+    "svelte": "dist/component/Slidy.svelte",
+    "types": "dist/types.d.ts",
+    "style": "dist/slidy.css",
+    "type": "module",
+    "files": [
+        "dist/*"
+    ],
+    "exports": {
+        ".": {
+            "import": "./dist/slidy.mjs",
+            "module": "./dist/slidy.mjs",
+            "require": "./dist/slidy.cjs",
+            "browser": "./dist/slidy.js",
+            "svelte": "./dist/component/Slidy.svelte",
+            "style": "./dist/slidy.css"
+        },
+        "./dist/component/Slidy.svelte": "./dist/component/Slidy.svelte",
+        "./dist/slidy.css": "./dist/slidy.css",
+        "./package.json": "./package.json"
+    },
+    "scripts": {
+        "dev": "node esbuild --dev",
+        "dev:svelte": "node esbuild --svelte",
+        "dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
+        "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist || prettier --write 'dist/**/*.{ts,md,svelte,json,html,css}'",
+        "build:local": "pnpm build -r --filter=@slidy/svelte...",
+        "format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
+        "pub": "pnpm build && pnpm publish --no-git-checks --access public",
+        "lint": "eslint src/**/*.{ts,js,svelte}"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Valexr/slidy.git"
+    },
+    "keywords": [
+        "carousel",
+        "component",
+        "svelte",
+        "sveltejs",
+        "svelte-plugin"
+    ],
+    "author": "Valexr",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Valexr/slidy/issues"
+    },
+    "homepage": "https://valexr.github.io/slidy",
+    "prettier": {
+        "semi": true,
+        "tabWidth": 4,
+        "printWidth": 120,
+        "singleQuote": true,
+        "svelteSortOrder": "options-markup-scripts-styles",
+        "svelteStrictMode": true,
+        "svelteAllowShorthand": true,
+        "svelteIndentScriptAndStyle": true,
+        "plugins": [
+            "prettier-plugin-svelte"
+        ]
+    },
+    "devDependencies": {
+        "@slidy/core": "workspace:*",
+        "@tsconfig/svelte": "^3.0.0",
+        "@types/node": "^17.0.21",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
+        "css-tree": "^2.1.0",
+        "esbuild-svelte": "^0.6.3",
+        "eslint": "^8.10.0",
+        "eslint-plugin-svelte3": "^3.4.1",
+        "svelte": "^3.46.4",
+        "svelte-check": "^2.4.5",
+        "svelte-preprocess": "^4.10.4",
+        "svelte2tsx": "^0.5.5",
+        "typescript": "^4.6.2"
+    },
+    "peerDependencies": {
+        "svelte": "^3.42.4"
+    }
 }
